# physical-ai-textbook

./: .env.example  .env.production  .gitignore  404.html  API_README.md  BUTTONS_NOW_VISIBLE.md  CLAUDE_SYSTEM_PROMPT.txt  DEPLOYMENT.md  DEPLOYMENT_COMPLETE_GUIDE.md  DEPLOYMENT_GUIDE.md  DEPLOY_INSTRUCTIONS.md  GITHUB_PAGES_DEPLOYMENT.md  HOMEPAGE_MODULES_UPDATED.md  HUGGINGFACE_QDRANT_SETUP.md  IMPLEMENTATION_SUMMARY.md  LAUNCH_CHECKLIST.md  LICENSE  QDRANT_SETUP_GUIDE.md  QUICKSTART.md  README.md  SETUP.md  SKILLS_GUIDE.md  URDU_MODAL_WORKING.md  VERCEL_DEPLOYMENT_GUIDE.md  api.py  blog.html  chatbot.html  deploy.sh  docusaurus.config.ts  index.html  login.html  markdown-page.html  package-lock.json  package.json  profile.html  signup.html  sitemap.xml  tsconfig.json
.docusaurus/: client-manifest.json  client-modules.js  docusaurus.config.mjs  globalData.json  i18n.json  registry.js  routes.js  routesChunkNames.json  site-metadata.json
assets/: chatbot-widget.js
backend/: .env.example  .gitignore  .vercelignore  1.16.0  1.50.0  README.md  VERCEL_DEPLOYMENT.md  api.py  api_for_huggingface.py  ask_endpoint_adapter.py  ingest.py  main.py  main_test.py  package.json  render.yaml  requirements.txt  router.py  simple_server.py  test_api.py  test_backend.py  test_openrouter.py  vercel.json
src/chatbot/backend/: .env  .env.example  .gitignore  agent.py  ingest.py  main.py  pyproject.toml  requirements.txt  retrieve.py  test_qdrant_connection.py  test_search.py  verify_ingestion.py
src/chatbot/backend/app/: __init__.py
src/chatbot/backend/app/services/: rag.py
(+383 files in other folders)
